apply changes in api and swagger
