# routes/api.php
@@ -23,14 +23,18 @@ Route::post('/login', 'Api\UserController@login');
 Route::group(['middleware' => 'auth:api'], function() {
     Route::get('user/logout', 'Api\UserController@logout');
     Route::get('user', 'Api\UserController@index');
-    Route::put('user', 'Api\UserController@update');
+    Route::post('user', 'Api\UserController@update');
     Route::delete('user', 'Api\UserController@delete');
+    Route::get('/user/send/{user_id}','Api\ConversationController@messageSingleUser');
+    Route::get('user/data', 'Api\SearchController@index');
 });
 
 Route::group(['middleware' => 'auth:api'], function() {
     Route::get('user/photos', 'Api\PhotoController@index');
+    Route::get('user/photos/{photo_id}', 'Api\PhotoController@profilePhoto');
     Route::post('user/photos', 'Api\PhotoController@store');
     Route::delete('user/photos/{photo_id}', 'Api\PhotoController@delete');
+
 });
 
 Route::group(['middleware' => 'auth:api'], function() {
@@ -38,9 +42,12 @@ Route::group(['middleware' => 'auth:api'], function() {
 
         Route::get('/all', 'Api\ConversationController@index');
         Route::get('/', 'Api\ConversationController@show');
+        Route::get('/{conversation_id}/members', 'Api\ConversationController@conversationMembers');
+        Route::get('/{conversation_id}/leave','Api\ConversationController@leaveConversation');
         Route::post('/', 'Api\ConversationController@store');
         Route::post('/{conversation_id}', 'Api\ConversationController@update');
         Route::delete('/{conversation_id}', 'Api\ConversationController@delete');
+        Route::post('/{conversation_id}/add','Api\SearchController@inviteUser');
 
         Route::group(['prefix' => '/{conversation_id}/messages'], function () {
             Route::get('/', 'Api\MessagesController@index');
